clusters/vps-k3s/flux-system/webhook-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flux-webhook
  namespace: flux-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`webhook.chenar.space`)
      kind: Rule
      services:
        - name: webhook-receiver
          namespace: flux-system
          port: 80
  tls:
    certResolver: letsencrypt-prod
